--- a/QAction_2/QAction_2.csproj
+++ b/QAction_2/QAction_2.csproj
@@ -10,6 +10,7 @@
     <ProjectReference Include="..\QAction_Helper\QAction_Helper.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Skyline.DataMiner.Dev.Protocol" Version="10.1.0.6" />
   </ItemGroup>
   <ProjectExtensions>
